fix content border radius to match the header and the footer

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -18,6 +18,7 @@
     font-size: inherit;
     outline: none;
     padding: 0;
+    border-radius: $shepherd-element-border-radius;
 
     header {
       @include pie-clearfix;
